# trello-client

./: .gitignore  Cargo.toml  README.md  aulas.json  build.sh
src/: lib.rs  main.rs
src/commands/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/core/: labels.rs  mod.rs  steps.rs
src/core/card/: mod.rs
src/core/json_reader/: mod.rs
src/core/trello_reposirtory/: add_card.rs  delete_card.rs  edit_card.rs  get_card.rs  mod.rs  utils.rs
src/core/trello_reposirtory/cards/: add_card.rs  delete_card.rs  get_card.rs  mod.rs
src/core/trello_reposirtory/webhooks/: add_webhook.rs  delete_webhook.rs  get_webhook.rs  mod.rs  update_webhook.rs
src/core/trello_repository/: mod.rs
src/core/trello_repository/cards/: add_card.rs  delete_card.rs  get_card.rs  mod.rs
src/core/trello_repository/labels/: get_labels.rs  mod.rs
src/core/trello_repository/webhooks/: add_webhook.rs  delete_webhook.rs  get_webhook.rs  update_webhook.rs
tests/: create_card.rs  help.rs
