[package]
name = "trello-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
assert_cmd = "2.0.14"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }

