[package]
name = "tc"
description = "Trello client library for my personal use"
version = "0.8.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12.4", features = ["json"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
assert_cmd = "2.0.14"
dotenv = "0.15.0"
